loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:2: error: not found: value a
while(a>0){
      ^LoopWhile:4: error: not found: value a
  a=a-1;
  ^