loopwhile.LoopWhile.scala.code
getX():Int;
while(a>0){
  avance();
  a=a-1;
}